Closed Bug 462697 Opened 16 years ago Closed 16 years ago

MDN "MsgMdnDisptched" typo trying to say "dunno, maybe they did, maybe they didn't"

Categories

(MailNews Core :: Backend, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9.1b2

People

(Reporter: philor, Assigned: philor)

References

Details

Attachments

(1 file)

Attached patch FixSplinter Review
You know your feature is vital and well-loved, when it takes 6.5 years for someone to notice that it's broken, and they only do then when someone's trying to delete an "unused" string.
Attachment #345895 - Flags: superreview?(bienvenu)
Attachment #345895 - Flags: review?(bienvenu)
Attachment #345895 - Flags: superreview?(bienvenu)
Attachment #345895 - Flags: superreview+
Attachment #345895 - Flags: review?(bienvenu)
Attachment #345895 - Flags: review+
Comment on attachment 345895 [details] [diff] [review]
Fix

heh, thx for fixing it, Phil.
http://hg.mozilla.org/comm-central/rev/fbdd74b5a8bb
Target Milestone: --- → mozilla1.9.1b2
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: