Bug 462697 - MDN "MsgMdnDisptched" typo trying to say "dunno, maybe they did, maybe they didn't," r+sr=bienvenu